--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+    "start" : "node index.js"
   },
-  "author": "",
+  "author": "jaemin",
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "morgan": "^1.9.1"
+  }
+  "engines" : {
+    "node" : "0.12.2"
   }
 }
